# slaif-api-gateway

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  Makefile  Project Quality Review-4.0.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
app/slaif_gateway/: __init__.py  config.py  lifespan.py  logging.py  main.py  metrics.py  startup_warnings.py
deploy/nginx/: slaif-api-gateway.conf
docs/: accounting.md  beta-readiness.md  chat-completions-custom-tools-investigation.md  chat-completions-multimodal-investigation.md  compatibility-matrix.md  configuration.md  database-schema.md  deployment.md  key-templates.md  openai-compatibility.md  pricing-catalog.md  provider-catalog-proposals.md  provider-forwarding-contract.md  quickstart.md  rc-beta.md  rc2-feature-scope.md  responses-compatibility.md  security-model.md  streaming-live-burn-margin.md  testing-hpc.md  testing-parallelism.md
docs/examples/: openai-completions-pricing.example.csv
docs/releases/: README.md  v0.1.0-rc.1.md
docs/runbooks/: README.md  admin-access.md  ambiguous-email-delivery.md  database-backup-restore.md  docker-nginx-troubleshooting.md  gateway-key-leak.md  hmac-secret-rotation.md  metrics-alert-thresholds.md  one-time-secret-encryption-key.md  postgresql-pool-readiness.md  provider-completed-reconciliation.md  provider-key-rotation.md  rc-beta-upgrade.md  redis-outage.md  stale-reservation-reconciliation.md
examples/: openai_gateway_smoke.py
migrations/: env.py
migrations/versions/: 0001_foundational_identity_and_keys.py  0002_quota_reservations_and_usage_ledger.py  0003_provider_routing_pricing_fx.py  0004_email_secrets_and_background_jobs.py  0005_fix_gateway_key_prefix_default.py  0006_email_delivery_attempt_state.py  0007_usage_profiles.py  0008_trusted_calibration_keys.py  0009_key_templates.py  0010_gateway_key_template_provenance.py  0011_response_references.py  0012_conversation_references.py
scripts/: codex-install-postgres.sh  codex-start-postgres.sh  create-test-db.sh  docker-refresh.sh  run-hpc-supercomputer-verify.sh  seed_test_data.py  setup-hpc-test-env.sh  test-parallel-safe.sh  test-supercomputer-sharded.sh  test-unit-parallel.sh
tests/: conftest.py
tests/browser/: test_admin_dashboard_smoke.py
tests/e2e/: test_openai_python_client_audio.py  test_openai_python_client_chat.py  test_openai_python_client_embeddings.py  test_openai_python_client_realtime.py  test_openai_python_client_responses.py  test_openai_python_client_streaming.py  test_openrouter_python_client_chat.py  test_openrouter_python_client_streaming.py
tests/integration/: conftest.py  db_test_utils.py  test_accounting_finalization_postgres.py  test_admin_activity_readonly_postgres.py  test_admin_bulk_key_import_execute_postgres.py  test_admin_bulk_key_import_preview_postgres.py  test_admin_catalog_readonly_postgres.py  test_admin_csv_exports_postgres.py  test_admin_email_delivery_actions_postgres.py  test_admin_fx_actions_postgres.py  test_admin_fx_import_execute_postgres.py  test_admin_fx_import_preview_postgres.py  test_admin_key_actions_postgres.py  (+48 more)
(+500 files in other folders)
