[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slaif-api-gateway"
version = "0.1.0"
description = "SLAIF OpenAI-compatible API gateway"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "SLAIF" }]
dependencies = [
  "fastapi",
  "uvicorn",
  "gunicorn",
  "pydantic",
  "pydantic-settings",
  "httpx",
  "sqlalchemy",
  "asyncpg",
  "alembic",
  "redis",
  "celery",
  "typer",
  "jinja2",
  "python-multipart",
  "argon2-cffi",
  "itsdangerous",
  "aiosmtplib",
  "structlog",
  "prometheus-client",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "respx",
  "testcontainers",
  "hypothesis",
  "ruff",
]

[project.scripts]
slaif-gateway = "slaif_gateway.cli.main:app"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-q"

[tool.ruff]
line-length = 100
