[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slaif-api-gateway"
version = "0.1.0"
description = "SLAIF OpenAI-compatible API gateway"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "SLAIF" }]
dependencies = [
  "fastapi",
  "uvicorn",
  "gunicorn",
  "pydantic",
  "pydantic-settings",
  "httpx",
  "sqlalchemy",
  "asyncpg",
  "alembic",
  "redis",
  "celery",
  "typer",
  "jinja2",
  "python-multipart",
  "argon2-cffi",
  "itsdangerous",
  "aiosmtplib",
  "structlog",
  "prometheus-client",
  "cryptography",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "respx",
  "openai",
  "playwright",
  "testcontainers[postgres]",
  "hypothesis",
  "ruff",
]

[project.scripts]
slaif-gateway = "slaif_gateway.cli.main:app"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools.package-data]
slaif_gateway = [
  "web/templates/**/*.html",
  "web/static/**/*",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-q"
markers = [
  "e2e: end-to-end tests that require an explicit local test database",
  "playwright: optional browser smoke tests that require TEST_DATABASE_URL and an installed Playwright browser",
]

[tool.ruff]
line-length = 100
